# pipeline-etl-metereologico-brasilia

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
dags/: weather_dag.py
notebooks/: analysis_data.ipynb
src/: extract_data.py  load_data.py  transform_data.py
